Added Not Found Exception Handling