@@ -3,45 +3,96 @@ package com.bharatp.TallyLedger.Common.Exeption;
 import com.bharatp.TallyLedger.Common.Defines.CustomHTTPStatus;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.validation.ConstraintViolationException;
+import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
+import jakarta.servlet.http.HttpServletRequest;
+
+import java.time.Instant;
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class RestExeptionHandler {
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
     @ResponseStatus(org.springframework.http.HttpStatus.BAD_REQUEST)
-    public ErrorResponseDTO handleValidation(MethodArgumentNotValidException exception)
-    {
-        List<String> error = exception.getBindingResult().getFieldErrors().stream().map(
-                fieldError -> fieldError.getField() + ": " + fieldError.getDefaultMessage()).toList();
-        return new ErrorResponseDTO(CustomHTTPStatus.BAD_REQUEST, "Validation Failed", null);
+    public ErrorResponseDTO handleValidation(MethodArgumentNotValidException exception, HttpServletRequest request) {
+        List<String> errors = exception.getBindingResult()
+                .getFieldErrors()
+                .stream()
+                .map(fieldError -> fieldError.getField() + ": " + fieldError.getDefaultMessage())
+                .collect(Collectors.toList());
+
+        return new ErrorResponseDTO.ErrorResponseBuilder()
+                .setTimeStamp((LocalDateTime.now()))
+                .setStatus(CustomHTTPStatus.BAD_REQUEST)
+                .setError(HttpStatus.BAD_REQUEST.getReasonPhrase())
+                .setMessage("Validation failed")
+                .setPath(request.getRequestURI())
+                .setErrors(errors)
+                .create();
     }
 
     @ExceptionHandler(ConstraintViolationException.class)
     @ResponseStatus(org.springframework.http.HttpStatus.BAD_REQUEST)
-    public ErrorResponseDTO handleConstraintViolation(ConstraintViolationException exception)
-    {
-        List<String> errors = exception.getConstraintViolations().stream().
-                map(constraintViolation -> constraintViolation.getPropertyPath() +": " + constraintViolation.getMessage() ).toList();
-        return new ErrorResponseDTO(CustomHTTPStatus.BAD_REQUEST,"Validation Failed", errors);
+    public ErrorResponseDTO handleConstraintViolation(ConstraintViolationException exception, HttpServletRequest request) {
+        List<String> errors = exception.getConstraintViolations()
+                .stream()
+                .map(cv -> cv.getPropertyPath() + ": " + cv.getMessage())
+                .collect(Collectors.toList());
+
+        return new ErrorResponseDTO.ErrorResponseBuilder()
+                .setTimeStamp((LocalDateTime.now()))
+                .setStatus(CustomHTTPStatus.BAD_REQUEST)
+                .setError(HttpStatus.BAD_REQUEST.getReasonPhrase())
+                .setMessage("Constraint violation")
+                .setPath(request.getRequestURI())
+                .setErrors(errors)
+                .create();
     }
 
     @ExceptionHandler(EntityNotFoundException.class)
     @ResponseStatus(org.springframework.http.HttpStatus.NOT_FOUND)
-    public ErrorResponseDTO handleNotFound(EntityNotFoundException ex) {
-        return new ErrorResponseDTO(CustomHTTPStatus.NOT_FOUND, ex.getMessage(), null);
+    public ErrorResponseDTO handleNotFound(EntityNotFoundException ex, HttpServletRequest request) {
+        return new ErrorResponseDTO.ErrorResponseBuilder()
+                .setTimeStamp((LocalDateTime.now()))
+                .setStatus(CustomHTTPStatus.NOT_FOUND)
+                .setError(HttpStatus.NOT_FOUND.getReasonPhrase())
+                .setMessage(ex.getMessage())
+                .setPath(request.getRequestURI())
+                .create();
+    }
+
+    @ExceptionHandler(NotFoundException.class)
+    @ResponseStatus(HttpStatus.NOT_FOUND)
+    public ErrorResponseDTO handleNotFoundException(NotFoundException ex, HttpServletRequest request)
+    {
+        return new ErrorResponseDTO.ErrorResponseBuilder()
+                .setTimeStamp((LocalDateTime.now()))
+                .setStatus(CustomHTTPStatus.NOT_FOUND)
+                .setError(HttpStatus.NOT_FOUND.getReasonPhrase())
+                .setMessage("Not Found Error")
+                .setPath(request.getRequestURI())
+                .setErrors(List.of(ex.getMessage()))
+                .create();
     }
 
     @ExceptionHandler(Exception.class)
-    @ResponseStatus(org.springframework.http.HttpStatus.NOT_FOUND)
-    public ErrorResponseDTO handleGeneral(Exception ex) {
-        return new ErrorResponseDTO(CustomHTTPStatus.INTERNAL_SERVER_ERROR, "Internal Server Error", List.of(ex.getMessage()));
+    @ResponseStatus(org.springframework.http.HttpStatus.INTERNAL_SERVER_ERROR)
+    public ErrorResponseDTO handleGeneral(Exception ex, HttpServletRequest request)
+    {
+        return new ErrorResponseDTO.ErrorResponseBuilder()
+                .setTimeStamp((LocalDateTime.now()))
+                .setStatus(CustomHTTPStatus.INTERNAL_SERVER_ERROR)
+                .setError(HttpStatus.INTERNAL_SERVER_ERROR.getReasonPhrase())
+                .setMessage("Internal Server Error")
+                .setPath(request.getRequestURI())
+                .setErrors(List.of(ex.getMessage()))
+                .create();
     }
-
-
 }
